1633
Looks like this was fixed somewhere along the way.
{code}
a.scala:3: error: double definition:
method apply:(xs: Seq[String])Null and
method apply:(xs: String*)Null at line 2
have same type after erasure: (xs: Sequence)Null
  def apply(xs: Seq[String]) = null
      ^
one error found
{code}
